--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,10 @@
 @charset "UTF-8";
 /*Обнуление*/
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  transition: .4s;
 }
 
 :focus, :active {
@@ -74,3 +69,42 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@layer base {
+  :root {
+    --text: #12161c;
+    --background: #fff;
+    --primary: #1f3f70;
+    --secondary: #78a5e8;
+    --accent: #99ce6a;
+    --accent-focus: #7da858;
+  }
+  .dark {
+    --text: #e3e7ed;
+    --background: #111518;
+    --primary: #6185be;
+    --secondary: #174487;
+    --accent: #b7da99;
+    --accent-focus: #667955;
+  }
+}
+@theme {
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
+  --color-accentfocus: var(--accent-focus);
+  --color-bg: var(--background);
+  --color-text: var(--text);
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+body{
+    background-color: var(--background);
+    color: var(--text);
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: 'Inter', sans-serif;
+}
